--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "cucumber": "^1.3.1"
+    "cucumber": "^1.3.1",
+	"chai":"^3.5.0",
+	"chai-as-promised":"^6.0.0"
   }
 }
