--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "cucumber": "^1.3.1",
 	"chai":"^3.5.0",
-	"chai-as-promised":"^6.0.0"
+	"chai-as-promised":"^6.0.0",
+  	"protractor-cucumber-framework":"^3.5.0"
   }
 }
