--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "child-process-promise": "^2.1.3",
     "cucumber": "^1.3.1",
-	"chai":"^3.5.0",
-	"chai-as-promised":"^6.0.0",
-  	"protractor-cucumber-framework":"^3.5.0"
+    "gulp": "^3.9.1",
+    "gulp-protractor": "^3.0.0",
+    "protractor": "^4.0.9",
+    "protractor-cucumber-framework": "^3.5.0",
+    "run-sequence": "^1.2.2",
+    "webdriver-manager": "^10.2.5"
+  },
+  "scripts": {
+    "install": "./node_modules/protractor/bin/webdriver-manager update"
   }
 }
