--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "gulp-protractor": "^3.0.0",
     "gulp-util": "^3.0.7",
     "protractor": "^4.0.9",
-    "protractor-cucumber-framework": "^3.5.0",
-    "run-sequence": "^1.2.2"
+    "protractor-cucumber-framework": "^3.5.0"
   },
   "scripts": {
     "install": "./node_modules/protractor/bin/webdriver-manager update"
